--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -7,6 +7,7 @@ body {
     line-height: 150%;
     letter-spacing: 0.15em;
     color: var(--title_color);
+    background-color: FDFDFD;
     text-align: center;
 
     @media screen and (min-width: 390px) {}
