--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ body {
   line-height: 150%;
   letter-spacing: 0.15em;
   color: var(--title_color);
+  background-color: FDFDFD;
   text-align: center;
 }
 @media screen and (min-width: 1440px) {
@@ -253,17 +254,17 @@ body {
   }
 }
 
-.color__grey {
-  background-color: var(--grey_color);
-}
-.color__rose {
-  background-color: var(--rose_color);
-}
-.color__blue {
+.background__blue {
   background-color: var(--blue_color);
 }
-.color__orange {
+.background__rose {
+  background-color: var(--rose_color);
+}
+.background__orange {
   background-color: var(--orange_color);
+}
+.background__grey {
+  background-color: var(--grey_color);
 }
 
 .header_section {
@@ -1954,6 +1955,7 @@ body {
   height: 264px;
   padding: 11px;
   border-radius: 30px;
+  opacity: 0.8;
 }
 @media screen and (min-width: 834px) {
   .about__item-area {
@@ -2054,6 +2056,9 @@ body {
   }
 }
 
+.why-section {
+  position: relative;
+}
 @media screen and (min-width: 834px) {
   .why-section {
     margin-top: 1534px;
@@ -2072,6 +2077,7 @@ body {
 
 .why__list {
   display: flex;
+  margin-top: -64px;
 }
 .why__list:first-child {
   margin-right: 328px;
@@ -2093,7 +2099,6 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 20px;
-  background: #EDF7FE;
 }
 .why__icon {
   width: 80px;
@@ -2102,15 +2107,39 @@ body {
 }
 .why__item-text {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 342px;
   height: 342px;
   padding: 20px;
   border-radius: 20px;
-  border: 4px solid #EDF7FE;
+  border: 4px solid var(--blue_color);
   background: #FFF;
   color: #15100F;
   font-family: Inter;
   font-size: 24px;
+  font-weight: 300;
+}
+.why__item-text--2 {
+  border: 4px solid var(--rose_color);
+}
+.why__item-text--3 {
+  border: 4px solid var(--orange_color);
+}
+.why__item-text--4 {
+  border: 4px solid var(--grey_color);
+}
+.why__central-image {
+  position: absolute;
+  top: 492px;
+  left: 624px;
+  width: 480px;
+  height: 480px;
+  background-size: cover;
+  border-radius: 50%;
+  box-shadow: 0px 4px 60px 0px rgba(21, 16, 15, 0.25);
+  background-image: url("/images/index/png/why_central-image_mac.png");
 }
 
 .area__top-left {
