--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -211,6 +211,7 @@
         height: 264px;
         padding: 11px;
         border-radius: 30px;
+        opacity: 0.8;
 
         @media screen and (min-width: 834px) {
             width: 408px;
