--- a/sass/layouts/_why.scss
+++ b/sass/layouts/_why.scss
@@ -1,4 +1,5 @@
 .why-section {
+    position: relative;
 
     @media screen and (min-width: 834px) {
         margin-top: 1534px;
@@ -16,6 +17,7 @@
 .why {
     &__list {
         display: flex;
+        margin-top: -64px;
 
         // display: flex;
         &:first-child {
@@ -47,7 +49,7 @@
         width: 200px;
         height: 200px;
         border-radius: 20px;
-        background: #EDF7FE;
+        // background: #EDF7FE;
     }
 
     &__icon {
@@ -58,24 +60,46 @@
 
     &__item-text {
         position: absolute;
-        // bottom: 0;
-        // left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 342px;
         height: 342px;
         padding: 20px;
         border-radius: 20px;
-        border: 4px solid #EDF7FE;
+        border: 4px solid var(--blue_color);
         background: #FFF;
 
         color: #15100F;
-        // text-align: center;
         font-family: Inter;
         font-size: 24px;
-        // font-style: normal;
-        // font-weight: 400;
-        // line-height: 150%;
-        // letter-spacing: 3.6px;
+        font-weight: 300;
+
+        &--2 {
+            border: 4px solid var(--rose_color);
+        }
+
+        &--3 {
+            border: 4px solid var(--orange_color);
+        }
+
+        &--4 {
+            border: 4px solid var(--grey_color);
+        }
     }
+
+    &__central-image {
+        position: absolute;
+        top: 492px;
+        left: 624px;
+        width: 480px;
+        height: 480px;
+        background-size: cover;
+        border-radius: 50%;
+        box-shadow: 0px 4px 60px 0px rgba(21, 16, 15, 0.25);
+        background-image: url('/images/index/png/why_central-image_mac.png');
+    }
+
 }
 
 .area {
