--- a/css/main.css
+++ b/css/main.css
@@ -2075,71 +2075,324 @@ body {
   }
 }
 
-.why__list {
-  display: flex;
-  margin-top: -64px;
+@media screen and (min-width: 834px) {
+  .why__list--first {
+    margin-top: -24px;
+    margin-bottom: 56px;
+  }
 }
-.why__list:first-child {
-  margin-right: 328px;
+@media screen and (min-width: 1440px) {
+  .why__list--first {
+    margin-top: -37px;
+    margin-bottom: 42px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__list--first {
+    margin-top: -64px;
+    margin-bottom: 144px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .why__list {
+    display: flex;
+  }
 }
 .why__list-item {
   position: relative;
-  margin-bottom: 144px;
-  width: 492px;
-  height: 442px;
 }
-.why__list-item:first-child {
-  margin-right: 328px;
+@media screen and (min-width: 834px) {
+  .why__list-item:first-child {
+    margin-right: 58px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__list-item:first-child {
+    margin-right: 188px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__list-item:first-child {
+    margin-right: 328px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .why__list-item {
+    width: 328px;
+    height: 290px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__list-item {
+    width: 404px;
+    height: 358px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__list-item {
+    width: 492px;
+    height: 442px;
+  }
 }
 .why__icon-area {
   position: absolute;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 200px;
   border-radius: 20px;
+}
+@media screen and (min-width: 834px) {
+  .why__icon-area {
+    display: flex;
+    width: 140px;
+    height: 140px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__icon-area {
+    width: 188px;
+    height: 188px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__icon-area {
+    width: 200px;
+    height: 200px;
+  }
 }
 .why__icon {
   width: 80px;
   height: 80px;
   fill: #FFF;
 }
+@media screen and (min-width: 834px) {
+  .why__icon {
+    width: 52px;
+    height: 52px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__icon {
+    width: 68px;
+    height: 68px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__icon {
+    width: 80px;
+    height: 80px;
+  }
+}
 .why__item-text {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 342px;
-  height: 342px;
-  padding: 20px;
+  padding: 12px;
+  width: 224px;
+  height: 96px;
+  color: var(--text_color);
+  font-family: var(--text_font);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  letter-spacing: 0.1em;
+  background-color: #FFF;
   border-radius: 20px;
-  border: 4px solid var(--blue_color);
-  background: #FFF;
-  color: #15100F;
-  font-family: Inter;
-  font-size: 24px;
-  font-weight: 300;
+}
+.why__item-text--1 {
+  margin-top: 48px;
+  border: 2px solid var(--blue_color);
+}
+@media screen and (min-width: 1440px) {
+  .why__item-text--1 {
+    border: 4px solid var(--blue_color);
+  }
 }
 .why__item-text--2 {
-  border: 4px solid var(--rose_color);
+  margin-top: 16px;
+  margin-left: 110px;
+  border: 2px solid var(--rose_color);
+}
+@media screen and (min-width: 1440px) {
+  .why__item-text--2 {
+    border: 4px solid var(--rose_color);
+  }
 }
 .why__item-text--3 {
-  border: 4px solid var(--orange_color);
+  margin-top: 374px;
+  border: 2px solid var(--orange_color);
+}
+@media screen and (min-width: 834px) {
+  .why__item-text--3 {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__item-text--3 {
+    border: 4px solid var(--orange_color);
+  }
 }
 .why__item-text--4 {
-  border: 4px solid var(--grey_color);
+  margin-top: 16px;
+  margin-left: 110px;
+  border: 2px solid var(--grey_color);
+}
+@media screen and (min-width: 1440px) {
+  .why__item-text--4 {
+    border: 4px solid var(--grey_color);
+  }
+}
+@media screen and (min-width: 834px) {
+  .why__item-text {
+    position: absolute;
+    width: 220px;
+    height: 220px;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: 300;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__item-text {
+    width: 264px;
+    height: 264px;
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__item-text {
+    width: 342px;
+    height: 342px;
+    font-size: 24px;
+  }
 }
 .why__central-image {
   position: absolute;
-  top: 492px;
-  left: 624px;
-  width: 480px;
-  height: 480px;
+  top: 432px;
+  left: 28px;
+  width: 334px;
+  height: 334px;
   background-size: cover;
   border-radius: 50%;
   box-shadow: 0px 4px 60px 0px rgba(21, 16, 15, 0.25);
   background-image: url("/images/index/png/why_central-image_mac.png");
+}
+@media screen and (min-width: 834px) {
+  .why__central-image {
+    top: 325px;
+    left: 268px;
+    width: 260px;
+    height: 260px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__central-image {
+    top: 424px;
+    left: 506px;
+    width: 376px;
+    height: 376px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__central-image {
+    top: 519px;
+    left: 624px;
+    width: 480px;
+    height: 480px;
+  }
+}
+.why__image-list {
+  display: none;
+}
+@media screen and (min-width: 834px) {
+  .why__image-list {
+    display: flex;
+  }
+}
+.why__image {
+  position: relative;
+  min-width: auto;
+  border-radius: 5%;
+}
+.why__image--left {
+  transform: rotate(-4.02deg);
+  border-bottom: 2px solid #FFF;
+}
+@media screen and (min-width: 834px) {
+  .why__image--left {
+    margin-top: 120px;
+    width: 434px;
+    height: 324px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__image--left {
+    margin-top: 164px;
+    width: 604px;
+    height: 452px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__image--left {
+    margin-top: 180px;
+    width: 740px;
+    height: 540px;
+  }
+}
+.why__image--right {
+  border-bottom: 2px solid #FFF;
+  transform: rotate(4.026deg);
+}
+@media screen and (min-width: 834px) {
+  .why__image--right {
+    margin-top: 60px;
+    margin-left: -144px;
+    width: 320px;
+    height: 424px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__image--right {
+    margin-top: 84px;
+    margin-left: -192px;
+    width: 448px;
+    height: 592px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__image--right {
+    margin-top: 92px;
+    margin-left: -184px;
+    width: 570px;
+    height: 732px;
+  }
+}
+.why__image--bottom {
+  z-index: -1;
+}
+@media screen and (min-width: 834px) {
+  .why__image--bottom {
+    margin-top: 392px;
+    margin-left: -244px;
+    width: 356px;
+    height: 268px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .why__image--bottom {
+    margin-top: 552px;
+    margin-left: -340px;
+    width: 496px;
+    height: 376px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .why__image--bottom {
+    margin-top: 670px;
+    margin-left: -348px;
+    width: 524px;
+    height: 396px;
+  }
 }
 
 .area__top-left {
