--- a/sass/layouts/_why.scss
+++ b/sass/layouts/_why.scss
@@ -16,90 +16,326 @@
 
 .why {
     &__list {
-        display: flex;
-        margin-top: -64px;
-
         // display: flex;
-        &:first-child {
-            margin-right: 328px;
+
+        // &:first-child {
+
+        //     @media screen and (min-width: 834px) {
+        //         margin-right: 58px;
+        //     }
+
+        //     @media screen and (min-width: 1440px) {
+        //         margin-right: 188px;
+        //     }
+
+        //     @media screen and (min-width: 1728px) {
+        //         margin-right: 328px;
+        //     }
+        // }
+
+        &--first {
+
+            @media screen and (min-width: 834px) {
+                margin-top: -24px;
+                margin-bottom: 56px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: -37px;
+                margin-bottom: 42px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-top: -64px;
+                margin-bottom: 144px;
+            }
+        }
+
+        @media screen and (min-width: 834px) {
+            display: flex;
         }
     }
+
 
     &__list-item {
         position: relative;
-        margin-bottom: 144px;
-        width: 492px;
-        height: 442px;
-        // outline: 1px solid tomato;
 
         &:first-child {
-            margin-right: 328px;
+
+            @media screen and (min-width: 834px) {
+                margin-right: 58px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-right: 188px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-right: 328px;
+            }
+        }
+
+        @media screen and (min-width: 834px) {
+            width: 328px;
+            height: 290px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 404px;
+            height: 358px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 492px;
+            height: 442px;
         }
     }
 
-    // &__item-area {}
-
     &__icon-area {
         position: absolute;
-        // top: 0;
-        // right: 0;
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
-        width: 200px;
-        height: 200px;
         border-radius: 20px;
-        // background: #EDF7FE;
+
+        @media screen and (min-width: 834px) {
+            display: flex;
+            width: 140px;
+            height: 140px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 188px;
+            height: 188px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 200px;
+            height: 200px;
+        }
     }
 
     &__icon {
         width: 80px;
         height: 80px;
         fill: #FFF;
+
+        @media screen and (min-width: 834px) {
+            width: 52px;
+            height: 52px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 68px;
+            height: 68px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 80px;
+            height: 80px;
+        }
     }
 
     &__item-text {
-        position: absolute;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 342px;
-        height: 342px;
-        padding: 20px;
+        padding: 12px;
+        width: 224px;
+        height: 96px;
+        color: var(--text_color);
+        font-family: var(--text_font);
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+        letter-spacing: 0.1em;
+        background-color: #FFF;
         border-radius: 20px;
-        border: 4px solid var(--blue_color);
-        background: #FFF;
 
-        color: #15100F;
-        font-family: Inter;
-        font-size: 24px;
-        font-weight: 300;
+        &--1 {
+            margin-top: 48px;
+            border: 2px solid var(--blue_color);
+
+            @media screen and (min-width: 1440px) {
+                border: 4px solid var(--blue_color);
+            }
+        }
 
         &--2 {
-            border: 4px solid var(--rose_color);
+            margin-top: 16px;
+            margin-left: 110px;
+            border: 2px solid var(--rose_color);
+
+            @media screen and (min-width: 1440px) {
+                border: 4px solid var(--rose_color);
+            }
         }
 
         &--3 {
-            border: 4px solid var(--orange_color);
+            margin-top: 374px;
+            border: 2px solid var(--orange_color);
+
+            @media screen and (min-width: 834px) {
+                margin-top: 0;
+            }
+
+            @media screen and (min-width: 1440px) {
+                border: 4px solid var(--orange_color);
+            }
         }
 
         &--4 {
-            border: 4px solid var(--grey_color);
+            margin-top: 16px;
+            margin-left: 110px;
+            border: 2px solid var(--grey_color);
+
+            @media screen and (min-width: 1440px) {
+                border: 4px solid var(--grey_color);
+            }
+        }
+
+        @media screen and (min-width: 834px) {
+            position: absolute;
+            width: 220px;
+            height: 220px;
+            padding: 20px;
+            font-size: 16px;
+            font-weight: 300;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 264px;
+            height: 264px;
+            font-size: 20px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 342px;
+            height: 342px;
+            font-size: 24px;
         }
     }
 
     &__central-image {
         position: absolute;
-        top: 492px;
-        left: 624px;
-        width: 480px;
-        height: 480px;
+        top: 432px;
+        left: 28px;
+        width: 334px;
+        height: 334px;
         background-size: cover;
         border-radius: 50%;
         box-shadow: 0px 4px 60px 0px rgba(21, 16, 15, 0.25);
         background-image: url('/images/index/png/why_central-image_mac.png');
+
+        @media screen and (min-width: 834px) {
+            top: 325px;
+            left: 268px;
+            width: 260px;
+            height: 260px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            top: 424px;
+            left: 506px;
+            width: 376px;
+            height: 376px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            top: 519px;
+            left: 624px;
+            width: 480px;
+            height: 480px;
+        }
     }
 
+    &__image-list {
+        display: none;
+
+        @media screen and (min-width: 834px) {
+            display: flex;
+        }
+    }
+
+    &__image {
+        position: relative;
+        min-width: auto;
+        border-radius: 5%;
+
+        &--left {
+            transform: rotate(-4.02deg);
+            border-bottom: 2px solid #FFF;
+
+            @media screen and (min-width: 834px) {
+                margin-top: 120px;
+                width: 434px;
+                height: 324px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: 164px;
+                width: 604px;
+                height: 452px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-top: 180px;
+                width: 740px;
+                height: 540px;
+            }
+        }
+
+        &--right {
+            border-bottom: 2px solid #FFF;
+            transform: rotate(4.026deg);
+
+            @media screen and (min-width: 834px) {
+                margin-top: 60px;
+                margin-left: -144px;
+                width: 320px;
+                height: 424px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: 84px;
+                margin-left: -192px;
+                width: 448px;
+                height: 592px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-top: 92px;
+                margin-left: -184px;
+                width: 570px;
+                height: 732px;
+            }
+        }
+
+        &--bottom {
+            z-index: -1;
+
+            @media screen and (min-width: 834px) {
+                margin-top: 392px;
+                margin-left: -244px;
+                width: 356px;
+                height: 268px;
+            }
+
+            @media screen and (min-width: 1440px) {
+                margin-top: 552px;
+                margin-left: -340px;
+                width: 496px;
+                height: 376px;
+            }
+
+            @media screen and (min-width: 1728px) {
+                margin-top: 670px;
+                margin-left: -348px;
+                width: 524px;
+                height: 396px;
+            }
+        }
+    }
 }
 
 .area {
