--- a/sass/layouts/_why.scss
+++ b/sass/layouts/_why.scss
@@ -16,23 +16,6 @@
 
 .why {
     &__list {
-        // display: flex;
-
-        // &:first-child {
-
-        //     @media screen and (min-width: 834px) {
-        //         margin-right: 58px;
-        //     }
-
-        //     @media screen and (min-width: 1440px) {
-        //         margin-right: 188px;
-        //     }
-
-        //     @media screen and (min-width: 1728px) {
-        //         margin-right: 328px;
-        //     }
-        // }
-
         &--first {
 
             @media screen and (min-width: 834px) {
@@ -225,13 +208,14 @@
         background-size: cover;
         border-radius: 50%;
         box-shadow: 0px 4px 60px 0px rgba(21, 16, 15, 0.25);
-        background-image: url('/images/index/png/why_central-image_mac.png');
+        background-image: url('/images/index/png/why_central-image_mob.png');
 
         @media screen and (min-width: 834px) {
             top: 325px;
             left: 268px;
             width: 260px;
             height: 260px;
+            background-image: url("/images/index/png/why_central-image_tab.png");
         }
 
         @media screen and (min-width: 1440px) {
@@ -239,6 +223,7 @@
             left: 506px;
             width: 376px;
             height: 376px;
+            background-image: url("/images/index/png/why_central-image_desk.png");
         }
 
         @media screen and (min-width: 1728px) {
@@ -246,6 +231,7 @@
             left: 624px;
             width: 480px;
             height: 480px;
+            background-image: url("/images/index/png/why_central-image_mac.png");
         }
     }
 
