--- a/css/main.css
+++ b/css/main.css
@@ -91,13 +91,12 @@ body {
 @media screen and (min-width: 390px) {
   .section-wide {
     width: 390px;
-    padding: 0 28px;
   }
 }
 @media screen and (min-width: 834px) {
   .section-wide {
     width: 834px;
-    padding: 0 60px;
+    padding: 0 40px;
     margin-top: 120px;
   }
 }
@@ -252,19 +251,6 @@ body {
   .caption_text {
     font-size: 40px;
   }
-}
-
-.background__blue {
-  background-color: var(--blue_color);
-}
-.background__rose {
-  background-color: var(--rose_color);
-}
-.background__orange {
-  background-color: var(--orange_color);
-}
-.background__grey {
-  background-color: var(--grey_color);
 }
 
 .header_section {
@@ -2413,4 +2399,131 @@ body {
 .area__bottom-right {
   bottom: 0;
   right: 0;
+}
+
+.background__blue {
+  background-color: var(--blue_color);
+}
+.background__rose {
+  background-color: var(--rose_color);
+}
+.background__orange {
+  background-color: var(--orange_color);
+}
+.background__grey {
+  background-color: var(--grey_color);
+}
+
+.photo-gallery__section {
+  height: 1345px;
+}
+@media screen and (min-width: 834px) {
+  .photo-gallery__section {
+    height: 1245px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .photo-gallery__section {
+    height: 2008px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .photo-gallery__section {
+    height: 2105px;
+  }
+}
+
+.photo-gallery {
+  outline: 1px solid tomato;
+  height: inherit;
+}
+.photo-gallery__caption {
+  margin-left: 0;
+}
+@media screen and (min-width: 834px) {
+  .photo-gallery__caption {
+    margin-left: -40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .photo-gallery__caption {
+    margin-left: -86px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .photo-gallery__caption {
+    margin-left: -80px;
+  }
+}
+.photo-gallery__clouds {
+  position: absolute;
+  width: 390px;
+  height: 1092px;
+  background-image: url("/images/index/png/photo-gallery_clouds_mob.png");
+  z-index: -1;
+  outline: 1px solid tomato;
+}
+@media screen and (min-width: 834px) {
+  .photo-gallery__clouds {
+    margin-top: -24px;
+    width: 754px;
+    height: 1056px;
+    background-image: url("/images/index/png/photo-gallery_clouds_tab.png");
+  }
+}
+@media screen and (min-width: 1440px) {
+  .photo-gallery__clouds {
+    margin-top: -64px;
+    width: 1268px;
+    height: 1800px;
+    background-image: url("/images/index/png/photo-gallery_clouds_desk.png");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .photo-gallery__clouds {
+    width: 1568px;
+    height: 1860px;
+    background-image: url("/images/index/png/photo-gallery_clouds_mac.png");
+  }
+}
+.photo-gallery__item {
+  position: relative;
+  z-index: 10;
+}
+.photo-gallery__item--1 {
+  top: -64px;
+  left: 282px;
+  width: 392px;
+  height: 536px;
+  background-image: url("/images/index/png/balloon1.png");
+  stroke-width: 4px;
+  stroke: #C1FAF6;
+}
+.photo-gallery__item--1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  background-image: url("/images/index/png/Vector.png");
+}
+.photo-gallery__item--2 {
+  top: -600px;
+  left: 1072px;
+  width: 404px;
+  height: 536px;
+  background-image: url("/images/index/png/balloon2.png");
+}
+.photo-gallery__item--2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  background-image: url("");
 }/*# sourceMappingURL=main.css.map */
