--- a/sass/base/_section-wide.scss
+++ b/sass/base/_section-wide.scss
@@ -6,12 +6,12 @@
 
     @media screen and (min-width: 390px) {
         width: 390px;
-        padding: 0 28px;
+        // padding: 0 28px;
     }
 
     @media screen and (min-width: 834px) {
         width: 834px;
-        padding: 0 60px;
+        padding: 0 40px;
         margin-top: 120px;
     }
 
