--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,6 @@
 @import 'components/colors';
 
 //Photo gallery section
-@import 'layouts/photo-gallery';
+@import 'layouts/gallery';
 
 // Footer-section
