--- a/css/main.css
+++ b/css/main.css
@@ -2433,9 +2433,6 @@ body {
   }
 }
 
-.photo-gallery {
-  outline: 1px solid tomato;
-}
 .photo-gallery__caption {
   margin-left: 0;
 }
@@ -2455,11 +2452,26 @@ body {
   }
 }
 .photo-gallery__clouds {
-  width: 390px;
-  height: 1092px;
+  margin-top: 48px;
+  margin-left: -48px;
+  width: 484px;
+  height: 1104px;
   background-image: url("/images/index/png/gallery_clouds_mob.png");
-  z-index: -1;
-  outline: 1px solid tomato;
+  animation: swing 20s linear infinite;
+}
+@keyframes swing {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-20px);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  75% {
+    transform: translateX(-10px);
+  }
 }
 @media screen and (min-width: 834px) {
   .photo-gallery__clouds {
@@ -2486,288 +2498,42 @@ body {
 }
 .photo-gallery__balloons {
   position: absolute;
-  margin-top: -1860px;
-  margin-left: -816px;
-  width: 1600px;
-  height: 1860px;
+  margin-top: -1140px;
+  margin-left: -196px;
+  width: 390px;
+  height: 1092px;
+  z-index: -1;
 }
-.photo-gallery__item {
-  position: absolute;
-}
-.photo-gallery__item--1 {
-  top: 0px;
-  left: 282px;
-  width: 392px;
-  height: 536px;
-  stroke-width: 4px;
-  stroke: #C1FAF6;
-  background-image: url("");
-}
-.photo-gallery__item--1::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--1 {
-    background-image: url("/images/index/png/gallery_balloon1_mac.png");
+@media screen and (min-width: 834px) {
+  .photo-gallery__balloons {
+    margin-top: -1056px;
+    margin-left: -360px;
+    width: 716px;
+    height: 1108px;
+    animation: fly 15s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
+  }
+  @keyframes fly {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(50px);
+    }
   }
 }
-.photo-gallery__item--2 {
-  top: 0px;
-  left: 1072px;
-  width: 404px;
-  height: 536px;
-  background-image: url("");
-}
-.photo-gallery__item--2::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--2 {
-    background-image: url("/images/index/png/gallery_balloon2_mac.png");
+@media screen and (min-width: 1440px) {
+  .photo-gallery__balloons {
+    margin-top: -1804px;
+    margin-left: -634px;
+    width: 1268px;
+    height: 1804px;
   }
 }
-.photo-gallery__item--3 {
-  top: 292px;
-  left: -36px;
-  width: 398px;
-  height: 498px;
-  background-image: url("");
-}
-.photo-gallery__item--3::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
 @media screen and (min-width: 1728px) {
-  .photo-gallery__item--3 {
-    background-image: url("/images/index/png/gallery_balloon3_mac.png");
-  }
-}
-.photo-gallery__item--4 {
-  top: 298px;
-  left: 772px;
-  width: 316px;
-  height: 408px;
-  background-image: url("");
-}
-.photo-gallery__item--4::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--4 {
-    background-image: url("/images/index/png/gallery_balloon4_mac.png");
-  }
-}
-.photo-gallery__item--5 {
-  top: 484px;
-  left: 1140px;
-  width: 428px;
-  height: 564px;
-  background-image: url("");
-}
-.photo-gallery__item--5::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--5 {
-    background-image: url("/images/index/png/gallery_balloon5_mac.png");
-  }
-}
-.photo-gallery__item--6 {
-  top: 587px;
-  left: 384px;
-  width: 336px;
-  height: 448px;
-  background-image: url("");
-}
-.photo-gallery__item--6::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--6 {
-    background-image: url("/images/index/png/gallery_balloon6_mac.png");
-  }
-}
-.photo-gallery__item--7 {
-  top: 701px;
-  left: 774px;
-  width: 338px;
-  height: 452px;
-  background-image: url("");
-}
-.photo-gallery__item--7::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--7 {
-    background-image: url("/images/index/png/gallery_balloon7_mac.png");
-  }
-}
-.photo-gallery__item--8 {
-  top: 864px;
-  left: 64px;
-  width: 408px;
-  height: 548px;
-  background-image: url("");
-}
-.photo-gallery__item--8::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--8 {
-    background-image: url("/images/index/png/gallery_balloon8_mac.png");
-  }
-}
-.photo-gallery__item--9 {
-  top: 1015px;
-  left: 560px;
-  width: 332px;
-  height: 428px;
-  background-image: url("");
-}
-.photo-gallery__item--9::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--9 {
-    background-image: url("/images/index/png/gallery_balloon9_mac.png");
-  }
-}
-.photo-gallery__item--10 {
-  top: 1028px;
-  left: 1122px;
-  width: 438px;
-  height: 564px;
-  background-image: url("");
-}
-.photo-gallery__item--10::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--10 {
-    background-image: url("/images/index/png/gallery_balloon10_mac.png");
-  }
-}
-.photo-gallery__item--11 {
-  top: 1308px;
-  left: 292px;
-  width: 404px;
-  height: 536px;
-  background-image: url("");
-}
-.photo-gallery__item--11::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--11 {
-    background-image: url("/images/index/png/gallery_balloon11_mac.png");
-  }
-}
-.photo-gallery__item--12 {
-  top: 1340px;
-  left: 770px;
-  width: 396px;
-  height: 520px;
-  background-image: url("");
-}
-.photo-gallery__item--12::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  background-image: url("");
-}
-@media screen and (min-width: 1728px) {
-  .photo-gallery__item--12 {
-    background-image: url("/images/index/png/gallery_balloon12_mac.png");
+  .photo-gallery__balloons {
+    margin-top: -1860px;
+    margin-left: -816px;
+    width: 1600px;
+    height: 1860px;
   }
 }/*# sourceMappingURL=main.css.map */
